# PhysX

pypxim/: CMakeLists.txt  pyproject.toml  setup.py  test.py
pypxim/src/: pypxim.cpp
