[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.11", "scikit-build"]
build-backend = "setuptools.build_meta"
include-package-data = true

[project]
name = "pypxim"
version = "0.1.0"
description = "An PhysX immediate mode pybind11 module"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]

